<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.gorden.dayexam.ui.settings.preference.CustomPreference
        app:key="@string/privacy_and_help_key"
        app:allowDividerAbove="true"
        app:summary="@string/privacy_and_help"/>
    <com.gorden.dayexam.ui.settings.preference.CustomPreference
        app:key="@string/privacy_key"
        app:summary="@string/privacy_summary"
        app:title="@string/privacy_title"/>
<!--    <com.gorden.dayexam.ui.settings.preference.CustomPreference-->
<!--        app:key="@string/bilibili_video_help_key"-->
<!--        app:summary="@string/bilibili_video_help_summary"-->
<!--        app:title="@string/bilibili_video_help_title"/>-->
    <com.gorden.dayexam.ui.settings.preference.CustomPreference
        app:key="@string/demo_template_key"
        app:summary="@string/demo_template_title"
        app:title="@string/demo_template_summary"/>

</PreferenceScreen>