<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:elevation="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/add_question_from_file"
        android:text="@string/parse_from_file"
        android:padding="14dp"
        android:textSize="18sp"
        android:fontFamily="@font/xwwk"
        style="@style/SelectableItemBackground"
        android:layout_gravity="center_vertical"
        android:textColor="@color/menu_title_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/edit_paper"
        android:text="@string/edit_paper"
        android:textSize="18sp"
        android:padding="14dp"
        android:fontFamily="@font/xwwk"
        style="@style/SelectableItemBackground"
        android:layout_gravity="center_vertical"
        android:textColor="@color/menu_title_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/delete_paper"
        android:text="@string/dialog_delete_paper_title"
        android:textSize="18sp"
        android:padding="14dp"
        android:fontFamily="@font/xwwk"
        style="@style/SelectableItemBackground"
        android:layout_gravity="center_vertical"
        android:textColor="@color/menu_title_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/sortByHand"
        android:text="@string/sort_by_hand"
        android:textSize="18sp"
        android:padding="14dp"
        android:fontFamily="@font/xwwk"
        style="@style/SelectableItemBackground"
        android:layout_gravity="center_vertical"
        android:textColor="@color/menu_title_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/move"
        android:text="@string/move"
        android:textSize="18sp"
        android:padding="14dp"
        android:fontFamily="@font/xwwk"
        style="@style/SelectableItemBackground"
        android:layout_gravity="center_vertical"
        android:textColor="@color/menu_title_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>