<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:flexWrap="wrap"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/search_in_paper"
        android:background="@drawable/search_scope_select_background"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="28dp">
        <ImageView
            android:id="@+id/search_in_paper_check"
            android:src="@drawable/ic_baseline_check_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/xwwk"
            android:textColor="#E6FFFFFF"
            android:textSize="16sp"
            android:text="@string/current_paper"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/search_global"
        android:background="@drawable/search_scope_unselect_background"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="28dp">
        <ImageView
            android:id="@+id/search_global_check"
            android:visibility="gone"
            android:src="@drawable/ic_baseline_check_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/xwwk"
            android:textColor="#E6FFFFFF"
            android:textSize="16sp"
            android:text="@string/global"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/search_recycle_bin"
        android:background="@drawable/search_scope_unselect_background"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="28dp">
        <ImageView
            android:id="@+id/search_recycle_bin_check"
            android:visibility="gone"
            android:src="@drawable/ic_baseline_check_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/xwwk"
            android:textColor="#E6FFFFFF"
            android:textSize="16sp"
            android:text="@string/recycle_bin"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</com.google.android.flexbox.FlexboxLayout>